# CryptoQuotesAPI_tz

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/local/: Dockerfile  pyproject.toml  start_app.sh  start_format.sh  start_lint.sh
src/: app.py  markets.py  models.py  schemas.py  settings.py
