[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
^/.git
__pycache__
venv/*
'''

[tool.poetry]
name = "cryptocurrquotesservice"
version = "0.1.0"
description = "crypto currencies polling service"
authors = ["DmitryIvanoff <d-iv.96@yandex.ru>"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.*"
uvicorn = {extras = ["standard"], version = "^0.*"}
aiohttp = "^3.8.1"
databases = {extras = ["aiosqlite"], version = "^0.*"}
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.32"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
sqlalchemy-stubs = "^0.4"
autoflake = "^1.4"
isort = "^5.10.1"
mypy = "^0.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
